# data-checked

./: .travis.yml  README.md  data-checked.cabal
src/Data/: Checked.hs
src/Data/Checked/: Strict.hs
