Name: data-checked
Version: 0.3
Category: Data
Stability: experimental
Synopsis: Type-indexed runtime-checked properties 
Description:
  This package provides a (phantom) type-indexed newtype evidence-wrapper for
  values that are checked to satisfy the property associated with the type. 

Homepage: https://github.com/mvv/data-checked
Bug-Reports: https://github.com/mvv/data-checked/issues

Author: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Maintainer: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Copyright: 2013 Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
License: BSD3
License-File: LICENSE

Extra-Source-Files:
  README.md

Tested-With: GHC==7.0.4, GHC==7.2.2, GHC==7.4.2, GHC==7.6.3, GHC==7.8.4,
             GHC==7.10.3, GHC==8.0.2, GHC==8.2.2, GHC==8.4.4, GHC==8.6.5,
             GHC==8.8.4, GHC==8.10.7, GHC==9.0.2, GHC==9.2.4, GHC==9.4.2

Cabal-Version: >= 1.6.0
Build-Type: Simple

Source-Repository head
  Type: git
  Location: https://github.com/mvv/data-checked.git

Library
  Build-Depends: base >= 4 && < 5
               , deepseq >= 1.2
  Hs-Source-Dirs: src
  GHC-Options: -Wall
  Exposed-Modules:
    Data.Checked
    Data.Checked.Strict

